examples/legacy/invalid_scl/undeclared_relation.scl
rel path(a, b) = edge(a, b)
rel path(a, c) = path(a, b), edge(b, c)
